login/register backend

--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "Albert",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongoose": "^8.4.5"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.5",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   }
 }
