--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.5",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
