--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Albert",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
