--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "lightgallery": "^2.7.2",
     "mongoose": "^8.4.5",
     "multer": "^1.4.5-lts.1",
     "uuid": "^10.0.0",
