--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lightgallery": "^2.7.2",
     "mongoose": "^8.4.5",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.4",
     "uuid": "^10.0.0",
     "validator": "^13.12.0",
     "winston": "^3.13.0",
