--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "lg-fullscreen": "^1.2.1",
-    "lg-thumbnail": "^1.2.1",
-    "lightgallery": "^2.7.2",
     "mongoose": "^8.4.5",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.4",
+    "socket.io": "^4.7.5",
     "uuid": "^10.0.0",
     "validator": "^13.12.0",
     "winston": "^3.13.0",
