--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.5",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0",
