--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-fetch": "^2.7.0",
     "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
+    "sweetalert2": "^11.12.3",
     "uuid": "^10.0.0",
     "validator": "^13.12.0",
     "winston": "^3.13.0",
