--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.5",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
