--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.4.5",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
+    "nodemon": "^3.1.4",
     "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
     "sweetalert2": "^11.12.3",
